[package]
name = "eXplorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eXplorer"
path = "src/main.rs"

[lib]
name = "folder"
path = "src/lib.rs"

[dependencies]
rayon = "1"
eframe = "0.27"
egui_extras = "0.27"
open = "5"
chrono = "0.4"
dirs = "5"
sysinfo = "0.31"

[profile.release]
opt-level = 3
lto = true
strip = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }